# ReSTIR-OptiX

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: FindOptiX.cmake
src/: CMakeLists.txt  restir_optix.hpp.in
src/app/: CMakeLists.txt  app.cpp  app.hpp  main.cpp
src/cuda_utils/: CMakeLists.txt  cuda_buffer.cpp  cuda_buffer.hpp  interop_buffer.cpp  interop_buffer.hpp  optix_program.cpp  optix_program.hpp  optix_sbt.hpp
src/gl_utils/: CMakeLists.txt  framebuffer.cpp  framebuffer.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  uniforms.hpp
src/misc/: CMakeLists.txt  camera.cpp  camera.hpp  check_macros.hpp  frame_counter.cpp  frame_counter.hpp  light_data.hpp  lights.cpp  lights.hpp  restir_config.hpp
src/raytracing/: CMakeLists.txt  launch_params.hpp  lighting.cu  raytracing_common.hpp  reservoir.hpp  rng.hpp  sample.cu  shading.hpp  spatial.cu
src/scene/: CMakeLists.txt  scene.cpp  scene.hpp  structs.hpp
src/shaders/: gbuffer.frag  gbuffer.vert  screen.frag  screen.vert
